# jim

./: .gitignore  Cargo.toml  README.md  diagnose_crash.sh  test_chunk_editing.sh  test_hybrid_save.sh  test_large_file_save.sh  test_lazy_memory.sh  test_save_correctness.sh  verify_save_fix.sh
.github/: copilot-instructions.md
.github/workflows/: rust-macos.yml  rust.yml
benches/: scroll_bench.rs
src/: lib.rs  main.rs
src/buffer/: cursor.rs  mod.rs  tests.rs
src/edit/: mod.rs  undo.rs
src/mode/: command.rs  insert.rs  mod.rs  normal.rs  operator.rs  register.rs  visual.rs
src/navigation/: mod.rs
src/parser/: mod.rs  node.rs  parser_thread.rs  structural_index.rs  token.rs  tokenizer.rs
src/ui/: viewport.rs
tests/: generate_test_data.rs
