[package]
name = "jim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jim"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Buffer & Text Management
ropey = "1.6"
memmap2 = "0.9"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# JSON Parsing (reference/comparison)
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "scroll_bench"
harness = false

[[bin]]
name = "generate_test_data"
path = "tests/generate_test_data.rs"

[lib]
name = "json_tool"
path = "src/lib.rs"
